<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:background="@drawable/border_style"
    tools:context="com.android.parkingsolv.RegistrationActivity"
   >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        >

        <ImageView
            android:id="@+id/my_toolbarImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@drawable/components_broders_style"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/reg_mobile"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@drawable/components_broders_style"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/mobile"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:inputType="phone"
        android:ems="10"
        android:padding="10dp"
        android:layout_below="@+id/reg_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/reg_carNo"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/carNo"
        android:background="@drawable/components_broders_style"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:inputType="number"
        android:layout_below="@+id/reg_mobile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/reg_licenseNo"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/licenseNo"
        android:background="@drawable/components_broders_style"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_below="@+id/reg_carNo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <EditText
        android:id="@+id/reg_DOB"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/DOB"
        android:background="@drawable/components_broders_style"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_below="@+id/reg_licenseNo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="date" />



        <Spinner
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/countrySpinner"
            android:layout_below="@+id/reg_DOB"
            android:background="@drawable/components_broders_style"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/citySpinner"
            android:background="@drawable/components_broders_style"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:layout_alignTop="@+id/countrySpinner"
            android:layout_toRightOf="@+id/countrySpinner"
            />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:id="@+id/profileImage"
        android:background="@drawable/components_broders_style"
        android:layout_below="@+id/countrySpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:text="@string/profilePic"
        android:id="@+id/ProfileText"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:layout_alignTop="@+id/profileImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:id="@+id/carNoPlateImage"
        android:background="@drawable/components_broders_style"
        android:layout_alignTop="@+id/profileImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="75dp"
        android:layout_height="95dp"
        android:text="@string/carNoPlate"
        android:id="@+id/carNoPlateText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_alignBottom="@+id/carNoPlateImage"
        android:layout_alignRight="@+id/carNoPlateImage"
        android:layout_alignEnd="@+id/carNoPlateImage"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp" />

    <EditText
        android:id="@+id/reg_interests"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/interests"
        android:background="@drawable/components_broders_style"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_below="@+id/profileImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/carNoPlateImage"
        android:layout_alignEnd="@+id/carNoPlateImage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/regSubmitbutton"
        android:layout_below="@+id/reg_interests"
        android:background="@drawable/components_broders_style"
        android:layout_marginTop="5dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
